src/main.css
body {
  font-family: "Sen", sans-serif;
}

header {
  border-radius: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  background-color: rgb(168, 166, 166);
  color: rgb(255, 255, 255);
  font-size: xx-large;
  height: 15vh;
}

section {
  margin: 10px 50px;
}

.actions-table {
  margin: auto;
  border-spacing: 0px;
  border: 1px solid gray;
  border-radius: 10px;
  gap: 10px;

  th {
    text-align: left;
    font-weight: 600;
  }

  tr td {
    border-top: 1px solid gray;
  }

  td,
  th {
    padding: 12px;
  }
}

.add-button {
  font-family: inherit;
  border-radius: 10px;
  border: none;
  background-color: rgb(152, 215, 247);
  padding: 4px 8px;
}

.add-button:hover {
  background-color: rgb(61, 151, 196);
}

.actions-config {
  display: flex;
  gap: 16px;
}

.queue {
  display: flex;
  flex-direction: column;
  align-items: center;

  li {
    list-style-type: none;
    display: flex;
    flex-direction: column;

    svg {
      height: 35px;
    }

    span {
      width: fit-content;
      border-radius: 10px;
      padding: 10px;
    }
  }

  li:last-child {
    border: 1px dashed black;
    border-radius: 10px;
    span {
      width: fit-content;
      border-radius: 10px;
      padding: 10px;
      background-color: rgb(227, 233, 231);
    }
  }
}

.completed {
  background-color: rgb(140, 230, 128);
}

.pending {
  background-color: rgb(230, 128, 128);
}

.switch-container {
  display: flex;
  align-items: center;
  gap: 10px;
}

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

